--- a/index.html
+++ b/index.html
@@ -3,74 +3,58 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Larry's Personal Site</title>
+  <title>CSS- My Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/mypeppers.jpg" width="200px" alt="Pepper Mania"></td>
-      <td>
-        <h1>Larry Larsen</h1>
-        <p><em>Systems Administrator at <a href="https://www.tacomacc.edu/">Tacoma Community College</a></em></p>
-        <p>I have several duties as a IT professional. Administer EMail, work with Active Directory, and develop applications using PowerShell and .NET.</p>
-      </td>
-    </tr>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="Cloud">
+    <h1>I'm Larry</h1>
+    <h2>a web developer</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="Cloud">
+    <img src="images/mountain.png" alt="Mountain">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <h2>Hello.</h2>
+      <img class="hands-image" src="images/hands.png" alt="Hands">
+      <p>I work on a software development team at Tacoma Community College. I also grow super hot peppers.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="webdev-image" src="images/web-development-filled.jpg" alt="Web-Dev">
+        <h3>.NET Development</h3>
+        <p>I'm still pretty new at .NET web development but love doing it and have many other responsibilities.</p>
+      </div>
+      <div class="skill-row">
+        <img class="powershell-image" src="images/Powershell.png" alt="PowerShell">
+        <h3>PowerShell</h3>
+        <p>I'm very good at using PowerShell and have created scripts for student and staff account creation.</p>
+      </div>
+    </div>
+    <hr>
 
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Touro University - Master of Information Technology</li>
-    <li>City University - Bachelor of Computer Systems</li>
-    <li>Tacoma Community College - Associate of Applied Sciences</li>
-  </ul>
-  <hr />
-  <h3>Work Experience</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Work</th>
-      </tr>
-    </thead>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <img class="world-image" src="images/icon-connected.png" alt="World">
+      <h3>I'd like to hear any feedback you have about my site.</h3>
+      <h3>Below you will find some options to contact me. Thanks!</h3>
+      <a class="btn" href="mailto:larry.mail@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
 
-    <tbody>
-      <tr>
-        <td>2001-2014</td>
-        <td>Information Instructional Support</td>
-      </tr>
-      <tr>
-        <td>2014-Current</td>
-        <td>Email Administrator, .NET/PowerShell Developer</td>
-      </tr>
-    </tbody>
-    <tfoot>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.tacomacc.edu">TCC Website</a>
+    <p>© 2018 Larsen.</p>
+  </div>
 
-    </tfoot>
-  </table>
-  <hr />
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>PowerShell</td>
-      <td>⭐⭐⭐⭐⭐</td>
-      <td>Web Development</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
-  <table cellspacing="10">
-    <tr>
-      <td>Active Directory</td>
-      <td>⭐⭐⭐⭐</td>
-      <td>Gardening</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
-  <hr />
-  <a href="hobbies.html">My Hobbies</a>
-  <br />
-  <a href="contact.html">Contact Info</a>
 </body>
 
 </html>
