Finalized changes for stage 1

--- a/index.html
+++ b/index.html
@@ -21,38 +21,38 @@
     <div class="profile">
       <h2>Hello.</h2>
       <img class="hands-image" src="images/hands.png" alt="Hands">
-      <p>I work on a software development team at Tacoma Community College. I also grow super hot peppers.</p>
+      <p class="descript">I work on a software development team at Tacoma Community College. I also grow super hot peppers.</p>
     </div>
     <hr>
+
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="webdev-image" src="images/web-development-filled.jpg" alt="Web-Dev">
+        <img class="webdev-image1" src="images/web-development-filled.jpg" alt="Web-Dev">
         <h3>.NET Development</h3>
-        <p>I'm still pretty new at .NET web development but love doing it and have many other responsibilities.</p>
+        <p class="descript">I'm still pretty new at .NET web development but love doing it and have many other responsibilities.</p>
       </div>
       <div class="skill-row">
-        <img class="powershell-image" src="images/Powershell.png" alt="PowerShell">
+        <img class="webdev-image2" src="images/web-development-filled.jpg" alt="Web-Dev">
         <h3>PowerShell</h3>
-        <p>I'm very good at using PowerShell and have created scripts for student and staff account creation.</p>
+        <p class="descript">I'm very good at using PowerShell and have created scripts for student and staff account creation.</p>
       </div>
     </div>
     <hr>
 
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <img class="world-image" src="images/icon-connected.png" alt="World">
       <h3>I'd like to hear any feedback you have about my site.</h3>
-      <h3>Below you will find some options to contact me. Thanks!</h3>
-      <a class="btn" href="mailto:larry.mail@gmail.com">CONTACT ME</a>
+      <img class="world-image" src="images/icon-connected.png" alt="World">
+      <p class="descript">Below you will find some options to contact me. Thanks!</p>
     </div>
   </div>
-
+  <a class="butn" href="mailto:larry.mail@gmail.com">CONTACT ME</a>
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.tacomacc.edu">TCC Website</a>
-    <p>© 2018 Larsen.</p>
+    <p class="copyright-text">© 2018 Larry Larsen.</p>
   </div>
 
 </body>
